--- a/compose/production/django/Dockerfile
+++ b/compose/production/django/Dockerfile
@@ -9,7 +9,7 @@ deb https://mirrors.tuna.tsinghua.edu.cn/debian/ buster-backports main contrib n
 deb https://mirrors.tuna.tsinghua.edu.cn/debian-security buster/updates main contrib non-free\
     > /etc/apt/sources.list
 
-RUN apt-get update
+#RUN apt-get update
 RUN apt-get install python3-dev default-libmysqlclient-dev -y
 
 WORKDIR /app
