--- a/compose/production/nginx/Dockerfile
+++ b/compose/production/nginx/Dockerfile
@@ -5,8 +5,13 @@ FROM nginx:1.17.1
 #COPY ./compose/production/nginx/sources.list /etc/apt/
 #RUN apt-get update && apt-get install -y --allow-unauthenticated certbot python-certbot-nginx
 
-RUN rm /etc/nginx/conf.d/default.conf
-COPY ./compose/production/nginx/hellodjango-blog-tutorial.conf /etc/nginx/conf.d/hellodjango-blog-tutorial.conf
+
+RUN rm /etc/nginx/conf.d/default.conf \
+&& mkdir -p /usr/share/nginx/html/static \
+&& mkdir -p /usr/share/nginx/html/media \
+&& mkdir -p /usr/share/nginx/ssl
+
+COPY ./compose/production/nginx/django_blog.conf /etc/nginx/conf.d/django_blog.conf
 
 
 
